# RevEng101

./: .gitignore  README.md  index.html
OAuthModelRouter/: .gitignore  README.md  db_tokens.sh  index.html  pyproject.toml  run.sh  setup.sh
OAuthModelRouter/docs/archive/: 2026-04-12-oauth-model-router-design.md
OAuthModelRouter/docs/explainers/: claude_auth_explained.html  openai_auth_explained.html  pkce_code_interception.html
OAuthModelRouter/docs/research/: CLAUDE.md  OPENAI_AUTH_FLOW.md  RESEARCH.md
OAuthModelRouter/scripts/auth/: setup.sh
OAuthModelRouter/scripts/debug/: test_claude_oauth_raw.sh  test_tokens.sh
OAuthModelRouter/scripts/dev/: run.sh
OAuthModelRouter/scripts/ops/: db_tokens.sh
OAuthModelRouter/src/oauthrouter/: __init__.py  app_state.py  cli.py  config.py  discover.py  models.py  probes.py  proxy.py  rate_limit_store.py  rate_limits.py  server.py  token_manager.py  token_store.py  trace_store.py
OAuthModelRouter/src/oauthrouter/routes/: __init__.py  api.py  pages.py  proxy.py
OAuthModelRouter/src/oauthrouter/static/: help.html  portal.css  portal.html  portal.js
OAuthModelRouter/tests/: test_discover.py  test_proxy.py  test_server.py  test_token_manager.py  test_token_store.py  test_trace_store.py
ProxyServer/: .gitignore  HOWTO.md  README.md  package-lock.json  package.json  rules.json  server.js  test.sh
UsageDashboard/: .gitignore  README.md  claude_code_dashboard.py  claude_sessions_dashboard.py  codex_sessions_dashboard.py  codex_sessions_web.py  index.html  run.sh  unified_dashboard.py  usage_hub.py  usage_hub_core.py  (+1 more)
(+85 files in other folders)
