[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oauthrouter"
version = "0.1.0"
description = "Local reverse proxy that manages multiple OAuth tokens for Claude and OpenAI APIs"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
]

[project.scripts]
oauthrouter = "oauthrouter.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/oauthrouter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
